# belay

./: .gitignore  .legal-gate-signoff  CLA.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  PRIVACY.md  README.md  THIRD_PARTY.md  build.rs  deny.toml
.cargo/: config.toml
advisory-gen/: Cargo.toml
advisory-gen/src/: main.rs
auth/: Cargo.toml
auth/src/: lib.rs
auth/tests/: parity_auth.rs
channels/: Cargo.toml
channels/src/: discord.rs  inbound.rs  lib.rs  matrix.rs  mattermost.rs  ntfy.rs  router.rs  slack.rs  teams.rs  telegram.rs  terminal.rs  webhook.rs  wecom.rs  whatsapp.rs
channels/tests/: discord_mock.rs  matrix_mock.rs  mattermost_mock.rs  ntfy_mock.rs  parity_router.rs  parity_terminal.rs  slack_mock.rs  teams_mock.rs  telegram_mock.rs  webhook_mock.rs  wecom_mock.rs  whatsapp_mock.rs
daemon/: Cargo.toml  build.rs
daemon-ebpf/: Cargo.toml
daemon-ebpf/src/: main.rs
daemon/data/: README.md  advisories.seed.json
daemon/src/: app.rs  audit.rs  channels_bridge.rs  distro.rs  finding.rs  host_api.rs  host_config.rs  inbound_http.rs  ipc.rs  lib.rs  main_daemon.rs  main_hook.rs  mcp_proxy.rs  mcp_scan.rs  paths.rs  pending.rs  proc_ancestry.rs  service.rs  state.rs
daemon/src/ai/: client_rig.rs  config.rs  explain.rs  mod.rs  recommend.rs  redact.rs  secret.rs
daemon/src/ebpf/: mod.rs  ringbuf.rs
daemon/src/egress/: inline.rs  mod.rs
daemon/src/engine/: allowlist.rs  canonicalize.rs  correlate.rs  data_region.rs  decide.rs  dropper.rs  event_eval.rs  extract.rs  integrity.rs  mod.rs  rule_i18n.rs  rules.rs  script_file_tests.rs  self_tamper.rs  trust.rs  types.rs
daemon/src/engine/bypass_corpus/: compound_command.rs  data_region_masking.rs  execution_context.rs  false_positive_guards.rs  fetch_chmod_exec.rs  heredoc.rs  inline_interpreter.rs  line_continuation.rs  long_flag_and_multi_arg.rs  mod.rs  path_normalization.rs  powershell_alias.rs  quoting.rs  ransomware_hallmarks.rs  script_file.rs  system_abuse.rs  wrapper_prefix.rs
daemon/src/etw/: mod.rs  session.rs
daemon/src/firewall/: assistant.rs  detect.rs  guard.rs  mod.rs
daemon/src/hardening/: mod.rs
daemon/src/honeypot/: mod.rs  watch_win.rs
daemon/src/kfilter/: mod.rs
daemon/src/netenrich/: mod.rs
daemon/src/observe/: mod.rs  secrets.rs
daemon/src/reflex/: mod.rs
daemon/src/skills/: enumerate.rs  gate.rs  judge.rs  mcp_config.rs  mcp_scan.rs  mod.rs  summary.rs  watch.rs
daemon/src/sshguard/: mod.rs
daemon/src/vuln/: mod.rs
daemon/src/vuln/nvd/: mod.rs  nvd_parse.rs  nvd_store.rs
daemon/src/wfp/: mod.rs
daemon/tests/: approval.rs  corpus.json  e2e_uds.rs  ebpf_integration.rs  etw_pipeline.rs  etw_smoke.rs  hook_fallback.rs  mcp_proxy.rs  parity.rs  wfp_smoke.rs
desktop/src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/scripts/: build-belay.sh
desktop/src-tauri/src/: audit.rs  commands.rs  lib.rs  main.rs  notify.rs  shape.rs  tray.rs  uds.rs
manage/: Cargo.toml
manage/src/: detect.rs  evidence.rs  gates.rs  hermes.rs  lib.rs  monitor.rs  posture.rs  protect.rs  render.rs  setup.rs  wire.rs
manage/tests/: detect_parity.rs  evidence_parity.rs  monitor_test.rs  posture_parity.rs  status_logs_parity.rs  wire_parity.rs
scanner/: Cargo.toml  build.rs
scanner/src/: archive.rs  context.rs  exclude.rs  host_adapter.rs  judge.rs  lib.rs  pack_build.rs  pipeline.rs  reputation.rs  resolve.rs  sarif.rs  score.rs  types.rs
scanner/src/analyzers/: ast.rs  fileclass.rs  malware.rs  meta_mcp.rs  mod.rs  osv.rs  patterns.rs  skill.rs  taint.rs  yara.rs
scanner/src/clamav/: cvd.rs  mod.rs  sigdb.rs
scanner/src/llm/: anthropic.rs  cascade.rs  mod.rs  ollama.rs  openai.rs
scanner/tests/: ast_taint.rs  cli_e2e.rs  golden_sarif.rs  llm_parity.rs  meta_mcp.rs  osv.rs  parity.rs  patterns.rs  resolve_context.rs  resolve_security.rs  skill_scan.rs  yara.rs
scanner/tests/common/: mod.rs
scanner/tests/corpus_scan/benign/hello_skill/: SKILL.md
scanner/tests/corpus_scan/benign/official_like/: Dockerfile  README.md
scanner/tests/fixtures/: belay_sarif_benign.json  belay_sarif_malicious.json  python_sarif_benign.json  python_sarif_malicious.json
scanner/yara_rules/: agent.yar  credentials.yar
sensor/: Cargo.toml
sensor/src/: main.rs
sensor/tests/: corpus.json  corpus.rs
server/: Cargo.toml  build.rs
server/src/: audit_reader.rs  auth.rs  lib.rs  source.rs  stream.rs
server/tests/: host_routes.rs  open_auth.rs  parity_rest.rs  source_route.rs  stream.rs
server/tests/fixtures/: rest_oracle_golden.json
skillscan/: Cargo.toml
skillscan/src/: capabilities.rs  confusables.rs  context.rs  finding.rs  lib.rs  manifest.rs  score.rs
skillscan/src/detect/: antirefusal.rs  coverage.rs  injection.rs  leastpriv.rs  mod.rs  patterns.rs  rugpull.rs  snooping.rs  ssrf.rs  toolpoison.rs  triggers.rs
skillscan/tests/: corpus_regression.rs  corpus_scan.rs  fp_regression.rs
skillscan/tests/corpus/: README.md
skillscan/tests/corpus/benign_combined/: SKILL.md
skillscan/tests/corpus/benign_design_skill/: SKILL.md
skillscan/tests/corpus/benign_high_accumulation/: SKILL.md
skillscan/tests/corpus/benign_security_doc_prose/: SKILL.md
skillscan/tests/corpus/benign_ssh_pubkey/: SKILL.md
skillscan/tests/corpus/benign_stdlib_import/: SKILL.md
skillscan/tests/corpus/benign_undeclared_caps/: SKILL.md
skillscan/tests/corpus/benign_unpinned_pip/: SKILL.md
skillscan/tests/corpus/edge_credential_read_only/: SKILL.md
skillscan/tests/corpus/edge_malicious_prose_directive/: SKILL.md
skillscan/tests/corpus/edge_real_typosquat/: SKILL.md
skillscan/tests/corpus/malicious_cloud_metadata/: SKILL.md
skillscan/tests/corpus/malicious_conversation_exfil/: SKILL.md
skillscan/tests/corpus/malicious_credential_exfil/: SKILL.md
skillscan/tests/corpus/malicious_remote_exec/: SKILL.md
skillscan/tests/corpus/malicious_remote_exec_wrapped/: SKILL.md
transport/: Cargo.toml  TESTING.md
transport/src/: lib.rs
(+183 files in other folders)
