[package]
license = "AGPL-3.0-or-later"
name = "belay-sensor"
version = "0.1.0"
edition = "2021"
description = "Belay hot-path sensor — static denylist for PreToolUse decisions"

[[bin]]
name = "belay-sensor"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
serde_json = "1"
