[package]
name = "skillscan"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
walkdir = "2"
tree-sitter = "0.22"
tree-sitter-python = "0.21"
unicode-security = "0.1"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
